--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,1 +1,8 @@
 <h1>URL Shortener</h1>
+
+<%= form_with model: Link.new do |form| %>
+<div class="flex gap-2 items-center">
+   <%= form.text_field :url, placeholder: "https://example.com", class: "flex-grow rounded" %>
+   <%= form.button "Save", class: "px-3 py-2 bg-gray-100 rounded" %>
+</div>
+<% end %>
