--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_with model: Link.new do |form| %>
 <div class="flex gap-2 items-center">
-   <%= form.text_field :url, placeholder: "https://example.com", class: "flex-grow rounded" %>
+   <%= form.text_field :url, required: true, placeholder: "https://example.com", class: "flex-grow rounded" %>
    <%= form.button "Save", class: "px-3 py-2 bg-gray-100 rounded" %>
 </div>
 <% end %>
