Work on the chart and use expand range and time intervals for users to check the chart graph

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -1,6 +1,7 @@
 <%= tag.div id: dom_id(link) do %>
   <%= link_to link.to_param, link %>
   <%= link.url %>
+  <%= pluralize link.views_count, "view"  %>
 
   <%= link_to view_path(link), target: '_blank', data: {turbo: false} do %>
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
