--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @link.url %></h1>
 
-<%= line_chart @link.views.group_by_day(:created_at).count %>
+<%= line_chart @link.views.group_by_day(:created_at, range: 2.weeks.ago..Time.now, expand_range: true).count %>
+
+User.group_by_day(:created_at, ).count
