--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,5 +1,5 @@
 <h1>URL Shortener</h1>
 
-<% render partial: 'form', locals: { link: Link.new} %>
+<% render partial: 'form', locals: { link: @link} %>
 
 <%= render partial: 'link', collection: @links, as: :link %>
