Fix syntax mistakes

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -2,4 +2,4 @@
 
 <% render partial: 'form', locals: { link: @link} %>
 
-<%= render partial: 'link', collection: @links, as: :link %>
+<%= render @links %>
