--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @link.url %></h1>
 
-<%= <%= link_to "Edit", edit_link_path(@link) %>
+<%= link_to "Edit", edit_link_path(@link) %>
 
 <%= line_chart @link.views.group_by_day(:created_at, range: 2.weeks.ago..Time.now, expand_range: true).count %>
 
