--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -2,7 +2,7 @@
 
 <%= render partial: "form", locals: { link: @link } %>
 
-<div class="flex gap-2 item-center">
+<div class="flex gap-2 item-center mt-4">
 <%= link_to "Cancel", link_path(@link) %>
 or <%= button_to "Delete", @link, method: :delete, data: { turbo_confirm: "Are you sure?" } %>
 </div>
