--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,8 @@
 
   <body>
     <main class="prose mx-auto mt-28 px-5">
-    <% if alert %>
-     <%= tag.p alert, class: "bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" if alert %>
-    <% end %>
-
-    <% if notice %>
-    <% end %>
+      <%= tag.p alert, class: "bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" if alert %>
+      <%= tag.p notice, class: "bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" if notice %>
       <%= yield %>
     </main>
   </body>
