--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -2,6 +2,6 @@
 
 <%= render partial: "form", locals: { link: @link} %>
 
-<div class="mt-5 flex flex-col gap-4 divide-y divide-gray-200">
+<div class="mt-5 flex flex-col divide-y divide-gray-200">
 <%= render @links %>
 </div>
