Update text size

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -12,11 +12,11 @@
   </div>
 
   <div class="col-span-2 text-center">
-  <%= link_to pluralize(link.views_count, "view"), link, class: "text-s px-3 mb-5 py-2 rounded bg-gray-100"  %>
+  <%= link_to pluralize(link.views_count, "view"), link, class: "text-xs px-3 mb-5 py-2 rounded bg-gray-100"  %>
   </div>
 
    <div class="text-center">
-  <%= link_to "Copy", link, class: "text-s px-3 mb-5 py-2 rounded bg-gray-100 no-underline" %>
+  <%= link_to "Copy", link, class: "text-xs px-3 mb-5 py-2 rounded bg-gray-100 no-underline" %>
   </div>
 
   </div>
