Update text size

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -1,6 +1,6 @@
 <%= tag.div id: dom_id(link) do %>
 
-<div class="grid grid-cols-8 py-4">
+<div class="grid grid-cols-8 items-center py-4">
   <div class="col-span-5">
 
   <%= link_to view_path(link), target: '_blank', data: {turbo: false} do %>
