--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -12,6 +12,7 @@
 <%= @link.description %>
 
   <%= link_to view_path(@link), target: '_blank', data: {turbo: false},class:"text-s px-3 mb-5 py-2 rounded bg-gray-100 no-underline" do %>
+   <%= image_tag "https://www.google.com/s2/favicons?domain=#{link.domain}", class: "inline-block mr-2" %>
     <%= @link.url %>
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline-block">
       <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
