--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: link, id: "link-form" do |form| %>
+<%= form_with model: link, id: "link_form" do |form| %>
   <div class="flex gap-2 items-center">
     <%= form.text_field :url, required: true, autofocus: true, placeholder: "https://example.com", class: "flex-grow rounded" %>
     <%= form.button "Save", class: "px-3 py-2 bg-gray-100 rounded" %>
