Copy the button clipboard to other place and update the font to medium

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -19,7 +19,7 @@
   </div>
 
    <div class="text-center">
-  <%= button_to "Copy", "#", class: " text-xs px-3 py-2 rounded bg-gray-100 no-underline", data: { controller: "clipboard", clipboard_text: view_url(link) } %>
+  <%= button_to "Copy", "#", class: " text-xs font-medium px-3 py-2 rounded bg-gray-100 no-underline", data: { controller: "clipboard", clipboard_text: view_url(link) } %>
   </div>
 
   </div>
