--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,20 @@
     <main class="prose mx-auto mt-28 px-5">
       <%= tag.p alert, class: "bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" if alert %>
       <%= tag.p notice, class: "bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" if notice %>
+
+      <nav class="mb-2 flex items-center justify-between">
+      <h1>URL Shortener</h1>
+
+      <div class="flex items-center gap-4">
+      <% if user_signed_in? %>
+          <%= link_to "Profile", edit_user_registration_path %>
+          <%= button_to "Logout", destroy_user_session_path, method: :delete %>
+      <% else %>
+          <%= link_to "Sign up", new_user_registration_path %>
+          <%= link_to "Login", new_user_session_path %>
+      <% end %>
+      </div>
+      </nav>
       <%= yield %>
     </main>
   </body>
