--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <%= tag.p notice, class: "bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" if notice %>
 
       <nav class="mb-2 flex items-center justify-between">
-      <h1>URL Shortener</h1>
+      <h1><%= link_to "Url Shortener", root_path, class: "no-underline text-3xl font-bold" %></h1>
 
       <div class="flex items-center gap-4">
       <% if user_signed_in? %>
