--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -2,4 +2,9 @@
 
 <div id="links" class="mt-5 flex flex-col divide-y divide-gray-200">
 <%= render @links %>
+<% if @pagy.pages > 1 %>
+    <div class="pt-8 mb-16 text-center">
+      <%== pagy_nav @pagy %>
+    </div>
+  <% end %>
 </div>
