Apply tailwind helper function

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -5,7 +5,7 @@
 
   <% if @pagy.pages > 1 %>
     <div class="pt-8 mb-16 text-center">
-      <%== pagy_nav @pagy %>
+      <%== pagy_nav_tailwind @pagy %>
     </div>
   <% end %>
 </div>
